dev/prometheus/alertmanager/alertmanager-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-route-https
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  tls:
    secretName: traefik-cert
  routes:
    - match: Host(`dev-alertmanager.artron.net`)
      kind: Rule
      services:
        - name: alertmanager-main
          port: 9093
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-route-http
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dev-alertmanager.artron.net`)
      kind: Rule
      services:
        - name: alertmanager-main
          port: 9093
      middlewares:
        - name: redirect-https
          namespace: ingress-system
